main 2 | Created users service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=blog-app
+
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.maximum-pool-size=5
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/blogAppDbTest
+spring.datasource.username=blogAdmin
+spring.datasource.password=1234
+
+spring.jpa.hibernate.ddl-auto=create-drop
