main 3 | CRUD operations written for BlogUser.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/blogAppDbTest
 spring.datasource.username=blogAdmin
 spring.datasource.password=1234
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
