main 5 | Created PostService and PostController with some request methods.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.datasource.username=blogAdmin
 spring.datasource.password=1234
 
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
